--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     <footer>
         <div class="container">
             <div class="all-heder-content">
-                <h1>My <span>Team</span></h1>
+                <h1>contact <span>Us</span></h1>
                 <hr>
             </div>
             <div class="contact-field">
